--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- ✅ Google Analytics 4 측정 ID 삽입 -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FZ6MCTVD12"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PTZJL8RXEN"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
