--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-PTZJL8RXEN'); // 여기 GA4 측정 ID로 교체
+
+    // ✅ UTM 파라미터 포함한 현재 URL을 강제로 전송
+    gtag('config', 'G-PTZJL8RXEN', {
+      'page_location': window.location.href
+    });
   </script>
 
   <!-- ✅ 2초 후 스팀 페이지로 리다이렉트 -->
