--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     // ✅ UTM 파라미터 포함한 현재 URL을 강제로 전송
     gtag('config', 'G-PTZJL8RXEN', {
-      'page_location': window.location.href
+      'page_location': window.location.href,
       'send_page_view': true
     });
   </script>
